--- a/exam.css
+++ b/exam.css
@@ -397,14 +397,28 @@ header>span{
     font-weight: 500;
     line-height: 24px; /* 171.429% */
     text-transform: capitalize;
-    margin-top: -7px;
-    margin-bottom: 8px;}
+    margin-top: -8px;
+    margin-bottom: 24px;}
 
-.check{
-    list-style-image: url("img/5.price/Check.svg");}
+li.check:before {
+    content: '';
+    height: 24px;
+    width: 24px;
+    display: inline-block;
+    vertical-align: middle;
+    background-image: url("img/5.price/Check.svg");
+    margin-right: 15px;}
+
+li.close:before {
+    content: '';
+    height: 24px;
+    width: 24px;
+    margin-right: 15px;
+    display: inline-block;
+    vertical-align: middle;
+    background-image: url("img/5.price/Close.svg");}
 
 .close{
-    list-style-image: url("img/5.price/Close.svg");
     opacity: 50%;}
 
 .email{
